# benchmark-dgemm

./: Cargo.toml  README.md
armpl-sys/: Cargo.toml  build.rs
armpl-sys/src/: armpl.rs  lib.rs
benchmark/: Cargo.toml
benchmark/src/: common.rs  main.rs  viewer.rs
common/: Cargo.toml
common/src/: lib.rs
src/: common.rs  main.rs
src/benchmark/: main.rs
utils/: Cargo.toml
