[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
armpl-sys = { path = "../armpl-sys" }
argh = "0.1.13"
libloading = "0.8.6"
rayon = "1.10.0"
serde = "1.0.217"
serde_json = "1.0.137"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[[bin]]
name = "benchmark-viewer"
path = "src/viewer.rs"
